--- a/.gitignore
+++ b/.gitignore
@@ -38,8 +38,8 @@ chrome-profiler-events*.json
 npm-debug.log
 yarn-error.log
 testem.log
-/typings
 
 # System Files
 .DS_Store
 Thumbs.db
+.angular/
