--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,7 +3,8 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": []
+     "typeRoots": ["node_modules/@types", "typings"],
+    "types": ["node"],
   },
   "files": [
     "src/main.ts",
