--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
-    "build": "ng build --prod",
-    "postinstall": "ngcc",
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint"
+    "heroku-postbuild": "ng build"
   },
   "private": true,
   "engines": {
